<resources>
    <string name="app_name">AXML Editor</string>
    <string name="encode">Encode</string>
    <string name="decode">Decode</string>
    <string name="oldAndroidInfo">Note: Your version of Android is too old to use the file picker. You have to input the location of the file manually. The files will be saved to Download folder in the internal storage.</string>
    <string name="working_file">Working file</string>
    <string name="select_folder_for_output">Select folder for output</string>
    <string name="encode_from_field">Encode from field</string>
    <string name="search">Search</string>
    <string name="replace">Replace</string>
    <string name="repAll">all</string>
    <string name="saveDecodedFiles">Save XML to a file after decoding</string>
    <string name="use_regex">Use regex for search and replacement</string>
    <string name="menu_with_more_features">Menu with more features</string>
    <string name="remove_useless_info">Remove useless info (splits, assetPack, derived apk id)</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="useless_info">Warning: Useless info (splits, assetPack, derived apk id) was detected in the manifest. These elements can cause an "App not installed error" on some devices, so it is recommended to remove them. There is an option inbuilt in the settings menu to do this.</string>
    <string name="output">Output</string>
    <string name="app_intent_filter_description">Edit AXML</string>
    <string name="go_to_bottom">Go to bottom of text</string>
    <string name="go_to_top">Go to top of text</string>
    <string name="save_decoded_xml">Save decoded XML</string>
    <string name="merge_activities">Search attributes and edit</string>
    <string name="recompile_apk">If an APK file was selected, compile and save it with the edited XML (not recommended)</string>
    <string name="set_bg">Set background color</string>
    <string name="set_editor_text_color">Set editor text color</string>
    <string name="success">Encoded and saved successfully to</string>
    <string name="invalid">Invalid file</string>
    <string name="nothing">Nothing selected</string>
    <string name="sign">Sign the exported APK</string>
    <string name="sign_fail">Failed to sign APK, saving without signing</string>
    <string-array name="options_array">
        <item>Search</item>
        <item>Delete</item>
        <item>Replace</item>
    </string-array>
    <string name="cancel_button_label">Cancel</string>
    <string name="choose_button_label">Select</string>
    <string name="default_dir" translatable="false">/sdcard</string>
    <string name="label_parent_directory">Parent Directory</string>
    <string name="last_edit">Last edited: </string>
    <string name="error_dir_access">Directory cannot be accessed</string>
    <string name="label_parent_dir" translatable="false">...</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="enter_replacement_text">Enter replacement text</string>
</resources>