<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:id="@+id/fix"
            android:title="@string/remove_useless_info" />
        <item android:id="@+id/regex"
            android:title="@string/use_regex"/>
        <item android:id="@+id/caseSensitive"
            android:title="@string/case_sensitive"/>
        <item android:id="@+id/goToTop"
            android:title="@string/go_to_top"/>
        <item android:id="@+id/goToBottom"
            android:title="@string/go_to_bottom"/>
        <item android:id="@+id/saveDecoded"
            android:title="@string/save_decoded_xml"/>
        <item android:id="@+id/mergeActivities"
            android:title="@string/merge_activities"/>
        <item android:id="@+id/setBackgroundColor"
            android:title="@string/set_bg"/>
        <item android:id="@+id/setTextColor"
            android:title="@string/set_editor_text_color"/>
</menu>